--- a/CollegeManager/Views/Home/Index.cshtml
+++ b/CollegeManager/Views/Home/Index.cshtml
@@ -1,14 +1,10 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-<div class="jumbotron" style=" width: 65%; margin: auto; margin-bottom: 5rem; ">
+﻿<div class="jumbotron" style=" width: 70%; margin: auto; margin-bottom: 8rem;  ">
     <h1>College Manager</h1>
     <p class="lead">College Manager is a free web app for manage great Universities around the world</p>
     <p><a style="margin-top: 2%;" href="~/Teacher/" class="btn btn-primary btn-lg">Start Managing</a></p>
 </div>
 
-<div class="row" style="margin-top: 3em;width: 65%; margin: auto;">
+<div class="row" style="margin-top: 7rem; width: 70%; margin: auto;">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
