--- a/CollegeManager/Views/Shared/_Layout.cshtml
+++ b/CollegeManager/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Dashboard", "Index", "Dashboard")</li>
                     <li>@Html.ActionLink("Teacher", "Index", "Teacher")</li>
-                    <li>@Html.ActionLink("Students", "Student", "Home")</li>
-                    <li>@Html.ActionLink("Course", "Course", "Home")</li>
-                    <li>@Html.ActionLink("Subjects", "Subjects", "Home")</li>
-                    <li>@Html.ActionLink("Grades", "Grades", "Home")</li>
+                    <li>@Html.ActionLink("Students", "Index", "Student")</li>
+                    <li>@Html.ActionLink("Course", "Index", "Course")</li>
+                    <li>@Html.ActionLink("Subjects", "Index", "Subject")</li>
+                    <li>@Html.ActionLink("Grades", "Index", "Grade")</li>
                     <li>@Html.ActionLink("Guide", "Index", "Guide")</li>
                 </ul>
             </div>
