--- a/CollegeManager/Views/Student/Index.cshtml
+++ b/CollegeManager/Views/Student/Index.cshtml
@@ -1,18 +1,16 @@
-﻿<div class="container" ng-app="students" ng-controller="studentCtrl" style="width: 80%; height: 75rem;  background-color: #0d1117; border-radius: 10px; padding: 1.3% 0.2% 0.2% 1%; overflow-y: scroll;">
-    <div class="panel" style="background: #161b22;">
-
-        <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Students</div>
-
-        <div class="panel-body" style="background: #0d1117; color: #8B949E; ">
-            <button id="add" type="button" class="btn btn-primary" shadow-none data-target="#AddStudent" data-toggle="modal" style="border-radius: 25px; width: 38px;">
+﻿<div id="cont-1" class="container" ng-app="students" ng-controller="studentCtrl">
+    <div id="cont-2" class="panel">
+        <div id="cont-3" class="panel-heading">Students</div>
+        <div id="cont-4" class="panel-body">
+            <button id="cont-5" type="button" class="btn btn-primary" shadow-none data-target="#AddStudent" data-toggle="modal">
                 <span class="glyphicon glyphicon-plus"></span>
             </button>
-            <input id="search" shadow-none ng-model="test" style="background: #0a0d12; height: 30px; margin-left: 10em; width: 100%; border: none; padding: 1.5%; " placeholder="Search for a student..." type="text" />
+            <input id="cont-6" shadow-none ng-model="search" placeholder="Search for a student..." type="text" />
         </div>
 
         @*LIST*@
-        <table class="table" style="background: #0d1117; color: #8B949E; border: 0.2px solid #161b22; ">
-            <thead style="background-color: #161b22; border: none; color: white; ">
+        <table id="cont-7" class="table">
+            <thead id="cont-8">
                 <tr>
                     <th class="text-center" style="border: 0.5px solid #161b22">ID</th>
                     <th class="text-center" style="border: 0.5px solid #161b22">Name</th>
@@ -22,18 +20,18 @@
                     <th class="text-center" style="border: 0.5px solid #161b22">Actions</th>
                 </tr>
             </thead>
-            <tbody style="color: #8B949E; border: 0.2px solid #161b22;  ">
-                <tr ng-repeat="t in Students | filter:test">
-                    <td class="text-center" style="border-right: 0.5px solid #161b22 !important;">{{t.StudentId}}</td>
-                    <td class="text-center">{{t.Name}}</td>
-                    <td class="text-center">{{t.Birthday | date }}</td>
-                    <td class="text-center">{{t.RgNumber}}</td>
-                    <td class="text-center">{{t.CourseName}}</td>
+            <tbody id="cont-9">
+                <tr ng-repeat="x in Students | filter:search">
+                    <td class="text-center" style="border-right: 0.5px solid #161b22 !important;">{{x.StudentId}}</td>
+                    <td class="text-center">{{x.Name}}</td>
+                    <td class="text-center">{{x.Birthday | date }}</td>
+                    <td class="text-center">{{x.RgNumber}}</td>
+                    <td class="text-center">{{x.CourseName}}</td>
                     <td class="text-center" style="width: 150px; padding: 0.5%;">
-                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#UpdateStudent" data-toggle="modal" class="btn btn-success" ng-click="updateStudentById(t)">
+                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#UpdateStudent" data-toggle="modal" class="btn btn-success" ng-click="updateStudentById(x)">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#DeleteStudent" id="btnDelete" data-toggle="modal" class="btn btn-danger" ng-click="deleteStudentById(t)">
+                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#DeleteStudent" id="btnDelete" data-toggle="modal" class="btn btn-danger" ng-click="deleteStudentById(x)">
                             <span class="glyphicon glyphicon-trash"></span>
                         </a>
                     </td>
@@ -49,7 +47,7 @@
                         <h3 style="color: #C9D1D9;">New Student</h3>
                     </div>
                     <div class="modal-body">
-                        <form class="form-horizontal" name="AdicionarNovoFuncionarioForm">
+                        <form class="form-horizontal" name="AddNewStudentForm">
                             <div class="form-group" style="width: 100%;">
                                 <input class="form-control" readonly="readonly" name="studentId" type="hidden" placeholder="Student Id" style="margin: auto; min-width: 300px;" />
                             </div>
@@ -83,7 +81,7 @@
                         <h3 style="color: #C9D1D9;">Update Student</h3>
                     </div>
                     <div class="modal-body" style="margin-left: 20px">
-                        <form class="form-horizontal" name="AtualizarForm">
+                        <form class="form-horizontal" name="UpdateForm">
                             <div class="form-group">
                                 <input class="form-control" readonly="readonly" name="StudentId" ng-model="UpdatedStudentId" type="hidden" placeholder="TeacherId" />
                             </div>
@@ -131,7 +129,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 
@@ -142,22 +139,73 @@
 }
 
 <style>
-    ::-webkit-scrollbar {
-        width: 12px;
-    }
-
-    ::-webkit-scrollbar-track {
+    #cont-1 {
+        width: 80%;
+        height: 75rem;
+        background-color: #0d1117;
         border-radius: 10px;
+        padding: 1.3% 0.2% 0.2% 1%;
+        overflow-y: scroll;
     }
 
-    ::-webkit-scrollbar-thumb {
+    #cont-2 {
         background: #161b22;
-        border-radius: 10px;
     }
 
-        ::-webkit-scrollbar-thumb:hover {
-            background: green;
+    #cont-3 {
+        border: none;
+        background: #161b22;
+        color: #C9D1D9;
+    }
+
+    #cont-4 {
+        background: #0d1117;
+        color: #8B949E;
+    }
+
+    #cont-5 {
+        border-radius: 25px;
+        width: 38px;
+    }
+
+        #cont-5:focus {
+            outline: none;
         }
+
+    #cont-6 {
+        background: #0a0d12;
+        height: 30px;
+        margin-left: 10em;
+        width: 100%;
+        border: none;
+        padding: 1.5%;
+    }
+
+        #cont-6:focus {
+            outline: none;
+        }
+
+    #cont-7 {
+        background: #0d1117;
+        color: #8B949E;
+        border: 0.2px solid #161b22;
+    }
+
+    #cont-8 {
+        background-color: #161b22;
+        border: none;
+        color: white;
+    }
+
+    th {
+        color: #C9D1D9;
+        font-weight: 300;
+    }
+
+    #cont-9 {
+        color: #8B949E;
+        border: 0.2px solid #161b22;
+    }
 
     .form-group {
         width: 100%;
@@ -197,10 +245,6 @@
         padding: 1.2rem !important;
     }
 
-    th {
-        font-weight: 300;
-    }
-
     label {
         color: whitesmoke !important;
         font-weight: 300;
@@ -218,4 +262,22 @@
     #search:focus {
         outline: none;
     }
+
+
+    ::-webkit-scrollbar {
+        width: 12px;
+    }
+
+    ::-webkit-scrollbar-track {
+        border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #161b22;
+        border-radius: 10px;
+    }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: green;
+        }
 </style>
