--- a/CollegeManager/Views/Guide/Index.cshtml
+++ b/CollegeManager/Views/Guide/Index.cshtml
@@ -8,8 +8,7 @@
         <br />
         <p class="lead">
             To build the project, you need to run the sql scripts, which is located in the folder Sql_Scripts, <b>Make sure the 'Show all files' option in the Solution menu is enabled.</b>
-            <br> <span style="margin-left: 2em;">➪ Run the scripts 001 to create the tables</span>
-            <br> <span style="margin-left: 2em;">➪ Run the scripts 002 to insert data into the table</span>
+            <br> <span style="margin-left: 2em;">➪ Run the scripts Script.sql to create the tables</span>
         </p>
     </div>
     <div style="text-align:justify; margin-left: 2em;">
