--- a/CollegeManager/Views/Home/Index.cshtml
+++ b/CollegeManager/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
     <div class="card text-white bg-primary mb-4">
         <div class="card-body" style="margin-bottom: 2em;">
-            <h5 class="card-title">Let''s start using?</h5>
+            <h5 class="card-title">Let's start using?</h5>
             <p class="card-text">Before you start using this system, take a look at the guide..</p>
             <div class="btn-div">
                 <a href="~/Guide"><button id="btn-start" style="width: 65%; border: none;" type="button" class="btn btn-info">Start</button></a>
