--- a/CollegeManager/Views/Subject/Index.cshtml
+++ b/CollegeManager/Views/Subject/Index.cshtml
@@ -2,6 +2,7 @@
     <div class="panel" style="border: none; background: #161b22 ">
         <div class="panel-heading" style="border: none; background: #161b22; color: #C9D1D9;">Subjects</div>
 
+        @*HEADER*@
         <div class="panel-body" style="background: #0d1117; color: #161b22;">
             <button type="button" class="btn btn-primary" data-target="#AdicionarFuncionario" data-toggle="modal" style="border-radius: 25px; width: 38px;">
                 <span class="glyphicon glyphicon-plus"></span>
@@ -66,8 +67,8 @@
                         </form>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addSubject()">Confirm</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clearData()">Close</button>
+                        <button type="button" id="btnSave" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addSubject()">Confirm</button>
+                        <button type="button" id="btnSave" class="btn btn-default" data-dismiss="modal" ng-click="clearData()">Close</button>
                     </div>
                 </div>
             </div>
@@ -75,58 +76,57 @@
 
 
         @*UPDATE SUBJECT*@
-        <div class="modal" id="AtualizarFuncionario" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="text-info">Update Subject</h3>
+        <div class="modal" id="AtualizarFuncionario" role="dialog" style="width: 100%; margin-top: 12rem;">
+            <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
+                <div class="modal-content" style="background: #0d1117; color: whitesmoke;">
+                    <div class="modal-header" style="border: none;">
+                        <h3 style="color: #C9D1D9;">Update Subject</h3>
                     </div>
                     <div class="modal-body" style="margin-left: 20px">
-                        <form class="form-horizontal" name="AtualizarForm">
+                        <form class="form-horizontal" name="UpdateForm">
                             <div class="form-group">
                                 <input class="form-control" readonly="readonly" name="UpdatedSubjectId" ng-model="UpdatedSubjectId" type="hidden" placeholder="Funcionario Id" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Nome</label>
                                 <input class="form-control" name="Nome" ng-model="UpdatedName" type="text" placeholder="Name" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Email</label>
                                 <input class="form-control" name="CourseId" ng-model="UpdatedCourseId" type="text" placeholder="UpdatedCourseId" />
                             </div>
                         </form>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="btnUpdate" data-dismiss="modal" ng-click="updateSubject()">
+                    <div class="modal-footer" style="border: none;">
+                        <button type="button" id="btnSave" class="btn btn-primary" data-dismiss="modal" ng-click="updateSubject()">
                             Update
                         </button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" id="btnSave" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
         </div>
 
+
         @*DELETE SUBJECT*@
-        <div class="modal" role="dialog" id="ExcluirFuncionario">
+        <div class="modal" role="dialog" id="ExcluirFuncionario" style="padding-top: 13em;">
             <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="text-info">Você tem certeza que deseja excluir o Funcionário?</h3>
+                <div class="modal-content" style="background: #0d1117;">
+                    <div class="modal-header" style="border: none; margin-top: 3em;">
+                        <h4 class="text-info" style="color: white; text-align: center;">Are you sure you want to delete this subject?</h4>
                     </div>
                     <div class="modal-body">
-                        <div>
-                            <p>Id do Funcionário : {{UpdatedSubjectId}}</p>
-                            <p>Nome do Fucionário : {{UpdatedName}}</p>
+                        <div style="color: white; text-align: center;">
+                            <p>ID: {{UpdatedSubjectId}}</p>
+                            <p>Subject's name: {{UpdatedName}}</p>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deleteSubject(UpdatedSubjectId)">Excluir</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                    <div class="modal-footer" style="border: none;">
+                        <button type="button" id="btnSave" class="btn btn-danger" data-dismiss="modal" ng-click="deleteSubject(UpdatedSubjectId)">Delete</button>
+                        <button type="button" id="btnSave" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
         </div>
-    
+
     </div>
 </div>
 
@@ -174,6 +174,22 @@
     .buttons {
         padding: 1.2rem !important;
     }
+
+
+    .modal-footer {
+        text-align: center;
+        margin-bottom: 3em;
+    }
+
+
+    #btnSave {
+        width: 15rem;
+        border: none;
+    }
+
+        #btnSave:focus {
+            outline: none;
+        }
 
     th {
         font-weight: 300;
