--- a/CollegeManager/Views/Course/Index.cshtml
+++ b/CollegeManager/Views/Course/Index.cshtml
@@ -23,6 +23,7 @@
                     <th class="text-center" style="border-bottom: 0.5px solid #161b22">Duration</th>
                     <th class="text-center" style="border-bottom: 0.5px solid #161b22">Category</th>
                     <th class="text-center" style="border-bottom: 0.5px solid #161b22">Teacher</th>
+                    <th class="text-center" style="border-bottom: 0.5px solid #161b22">Students Count</th>
                     <th class="text-center" style="border-bottom: 0.5px solid #161b22">Actions</th>
                 </tr>
             </thead>
@@ -33,6 +34,7 @@
                     <td class="text-center">{{c.Duration}}y</td>
                     <td class="text-center">{{c.Category}}</td>
                     <td class="text-center">{{c.TeacherName}}</td>
+                    <td class="text-center">{{c.StudentsCount}}</td>
 
                     <td class="text-center" style="width: 150px; padding: 0.5%;">
                         <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
